--- a/healthion-api/envs/.env.example
+++ b/healthion-api/envs/.env.example
@@ -13,5 +13,9 @@ DB_USER=healthion
 DB_PASSWORD=healthion
 
 AUTH0_DOMAIN=dev-*****.eu.auth0.com
-AUTH0_AUDIENCE=healthion-api
+AUTH0_AUDIENCE=your-api-audience
 AUTH0_ISSUER=https://dev-*****.eu.auth0.com
+
+# OPEN WEARABLES
+OPEN_WEARABLES_API_URL=http://localhost:8000
+OPEN_WEARABLES_API_KEY=your-api-key
