--- a/healthion-web/.env.example
+++ b/healthion-web/.env.example
@@ -1,3 +1,8 @@
 VITE_APP_NAME=Healthion
 VITE_BASE_URL=
 VITE_USE_HASH_ROUTE=false
+
+# Auth0 Configuration
+VITE_AUTH0_DOMAIN=your-domain.auth0.com
+VITE_AUTH0_CLIENT_ID=your-client-id
+VITE_AUTH0_AUDIENCE=your-api-audience
